--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,9 +14,11 @@
     },
     "dependencies": {
         "@types/express": "^5.0.4",
+        "@upstash/redis": "^1.35.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^5.1.0",
+        "ioredis": "^5.8.2",
         "socket.io": "^4.8.1"
     }
 }
